feat(cloud): Update College name

--- a/esports.html
+++ b/esports.html
@@ -93,7 +93,7 @@
 						<ul class="icons">
 							<li>Course Btech IV Sem</a></li>
 							<li>2018-22</li>
-							<li><a href="https://www.geu.ac.in/">Graphic Era University</a></li>
+							<li><a href="https://www.geu.ac.in/">Graphic Era Deemed to be University</a></li>
 						
 					</div>
 				</div>
